fixed spacing in navbar

--- a/style.css
+++ b/style.css
@@ -23,10 +23,14 @@ body {
 .navbar {
     padding-top: 1vh;
     font-size: 20px;
-    display: grid;
-    grid-template-columns: repeat(14, minmax(0, 1fr));
+    display: flex;
+    /* display: grid; */
+    /* grid-template-columns: repeat(14, minmax(0, 1fr)); */
     height: 5vh;
     /* cursor: pointer; */
+    position: relative;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 
 .navbar>div {
@@ -35,7 +39,9 @@ body {
 
 
 .navbar>#nav0 {
-    grid-column: 1;
+    /* grid-column: 1; */
+    left: 1px;
+    position: absolute;
 }
 
 .navbar>#nav1 {
@@ -43,7 +49,9 @@ body {
 }
 
 .navbar>div:not(#nav0) {
-    text-align: center;
+    /* text-align: center; */
+    /* padding: 10px; */
+    padding-left: 30px;
 }
 
 .navbar>div>xy1 {
@@ -826,4 +834,29 @@ main {
 .bookform {
     background-color: grey;
     border-radius: 14px;
+}
+
+
+
+/* homepage */
+.homepage {
+    display: block !important;
+    height: 92vh;
+    opacity: 100%;
+}
+
+.homepagecontainer {
+    display: grid;
+    grid-template-columns: 1fr 0.1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 100%;
+}
+
+#scritta {
+    grid-row: 2;
+    display: flex;
+    justify-items: flex-end;
+    align-items: flex-end;
+    font-size: 200px;
+    font-weight: 600;
 }
